<resources>
    <string name="app_name">Plain Keyboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="lang_russian">Русский (Russian)</string>
    <string name="lang_english">English (English)</string>
    <string name="lang_spanish">Español (Spanish)</string>
    <string name="lang_symbols_ru">Символы (!#?)</string>
    <string name="lang_symbols_en">Symbols (!#?)</string>
    <string name="lang_emoji_ru">Эмодзи (😡🤡👍)</string>
    <string name="lang_emoji_en">Emoji (😡🤡👍)</string>
    <string name="section_wipe_ru">⚙️ НАСТРОЙКА СБРОСА ДАННЫХ</string>
    <string name="section_wipe_en">⚙️ WIPE DATA SETUP</string>
    <string name="section_keyboard_ru">⌨️ КЛАВИАТУРА</string>
    <string name="section_keyboard_en">⌨️ KEYBOARD</string>
    <string name="section_instructions_ru">📖 ИНСТРУКЦИЯ</string>
    <string name="section_instructions_en">📖 INSTRUCTIONS</string>
    <string name="section_advanced_ru">⚡ ДОПОЛНИТЕЛЬНО</string>
    <string name="section_advanced_en">⚡ ADVANCED</string>
    <string name="hint_set_command">Введите секретный код</string>
    <string name="button_save_command">💾 Сохранить код</string>
    <string name="button_keyboard_settings">└── Включить в системе</string>
    <string name="button_choose_keyboard">└── Сделать основной</string>
    <string name="button_select_languages">└── Выбрать язык</string>
    <string name="button_read_instructions">└── Как это работает</string>
    <string name="button_additional_options">└── Скрытые настройки</string>
    <string name="button_main_menu_ru">Основное Меню</string>
    <string name="button_main_menu_en">Main Menu</string>
    <string name="title_accessibility_required_en">Accessibility required</string>
    <string name="title_accessibility_required_ru">Требуются спецвозможности</string>
    <string name="title_select_languages_ru">Выберите языки сервиса клавиатуры</string>
    <string name="title_select_languages_en">Select keyboard service languages</string>
    <string name="title_confirmation_ru">Подтверждение</string>
    <string name="title_confirmation_en">Confirmation</string>
    <string name="title_instructions_ru">Инструкция</string>
    <string name="title_instructions_en">Instructions</string>
    <string name="action_save_ru">Сохранить</string>
    <string name="action_save_en">Save</string>
    <string name="action_cancel_ru">Отмена</string>
    <string name="action_cancel_en">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="accessibility_text_1_en">Give accessibility permission to the app</string>
    <string name="accessibility_text_1_ru">Дайте приложению спецвозможности</string>
    <string name="accessibility_text_2_en">Go to accessibility settings and enable them for our app.</string>
    <string name="accessibility_text_2_ru">Перейдите в настройки спецвозможностей и там включите их для нашего приложения.</string>
    <string name="accessibility_button_1_en">Go to accessibility settings</string>
    <string name="accessibility_button_1_ru">Перейти в настройки спецвозможностей</string>
    <string name="accessibility_text_3_en">If you\'re told in Accessibility settings that this is a restricted setting, go to the app settings, tap the three dots in the upper right corner, and then tap Allow restricted settings.</string>
    <string name="accessibility_text_3_ru">Если вам в настройках спецвозможностей сказали, что это ограниченная настройка, то перейдите в настройки приложения, нажмите три точки в правом верхнем углу и затем нажмите разрешить ограниченные настройки.</string>
    <string name="accessibility_button_2_en">Go to the app settings</string>
    <string name="accessibility_button_2_ru">Перейти в настройки приложения</string>
    <string name="accessibility_text_4_en">Then go back to the accessibility settings and enable them for our app.</string>
    <string name="accessibility_text_4_ru">Затем снова перейдите в настройки спецвозможностей и включите их для нашего приложения.</string>
    <string name="accessibility_button_3_en">Go to the accessibility settings</string>
    <string name="accessibility_button_3_ru">Перейти в настройки спецвозможностей</string>
    <string name="accessibility_text_5_en">Don\'t help? Reinstall app.\nDon\'t help? Reboot the phone.\nDon\'t help? Use:\n\nadb shell appops set duress.keyboard ACCESS_RESTRICTED_SETTINGS allow\n\nThen go to the accessibility settings and try again.</string>
    <string name="accessibility_text_5_ru">Не помогло? Переустановите приложение.\nНе помогло? Перезагрузите телефон.\nНе помогло? Используйте:\n\nadb shell appops set duress.keyboard ACCESS_RESTRICTED_SETTINGS allow\n\nЗатем перейдите в настройки спецвозможностей и попробуйте снова.</string>
    <string name="admin_explanation_ru">Дайте разрешение Администратора. Необходимо для работы функции стирания данных. Стирает данные только когда вы зададите и введете свой код на экране блокировки используя клавитуру этого приложения и нажмёте стрелку Enter (⏎). Также опционально вы можете включить сброс данных при пропадании сети, подключении USB (ПК, флешка, USB мышка и тд), или даже при зарядке и перезагрузке. Также опционально может блокировать экран, вы увидите в описании опции перед включением.</string>
    <string name="admin_explanation_en">Grant Administrator permission. This is required for the data wipe feature to work. Data will only be wiped when you set and enter your code on the lock screen using the app\'s keyboard and press the Enter arrow (⏎). You can also optionally enable data reset when the network is lost, when a USB connection (PC, flash drive, USB mouse, etc.) is connected, or even when charging and reboot. Also optionally can lock the screen, you\'ll see this in the option description before enabling it.</string>
    <string name="hint_set_command_ru">Задайте команду для сброса данных</string>
    <string name="hint_set_command_en">Set wipe data command</string>
    <string name="button_save_command_ru">Сохранить команду</string>
    <string name="button_save_command_en">Save command</string>
    <string name="button_keyboard_settings_ru">Открыть настройки клавиатур чтобы включить нашу.</string>
    <string name="button_keyboard_settings_en">Open keyboard settings to enable our.</string>
    <string name="button_choose_keyboard_ru">Выбрать нашу клавиатуру если включена</string>
    <string name="button_choose_keyboard_en">Choose our keyboard if enabled</string>
    <string name="button_select_languages_ru">Выбрать языки сервиса клавиатуры</string>
    <string name="button_select_languages_en">Select keyboard service languages</string>
    <string name="button_read_instructions_ru">Прочитать подробную инструкцию</string>
    <string name="button_read_instructions_en">Read detailed instructions</string>
    <string name="button_additional_options_ru">Дополнительные Параметры</string>
    <string name="button_additional_options_en">Additional Options</string>
    <string name="toast_command_saved_ru">Команда сохранена: </string>
    <string name="toast_command_saved_en">Command saved: </string>
    <string name="toast_hash_error_ru">Ошибка! Хеши не совпадают!</string>
    <string name="toast_hash_error_en">Error! Hashes Not Match!</string>
    <string name="toast_hash_error_general">Ошибка хеширования</string>
    <string name="toast_languages_saved_ru">Языки сервиса клавиатуры сохранены</string>
    <string name="toast_languages_saved_en">Keyboard service languages saved</string>
    <string name="toast_enabled_ru">Включено</string>
    <string name="toast_disabled_ru">Выключено</string>
    <string name="toast_enabled_en">Enabled</string>
    <string name="toast_disabled_en">Disabled</string>
    <string name="toast_wipe_on_ime_enabled_ru">Стирание данных при переключении на другую виртуальную клавиатуру включено</string>
    <string name="toast_wipe_on_ime_disabled_ru">Стирание данных при переключении на другую виртуальную клавиатуру выключено</string>
    <string name="toast_wipe_on_ime_enabled_en">Wipe data when switching to another virtual keyboard is enabled</string>
    <string name="toast_wipe_on_ime_disabled_en">Wipe data when switching to another virtual keyboard is disabled</string>
    <string name="toast_wipe_on_reboot_enabled_ru">Сброс при перезагрузке включён</string>
    <string name="toast_wipe_on_reboot_disabled_ru">Сброс при перезагрузке выключен</string>
    <string name="toast_wipe_on_reboot_enabled_en">Wipe on reboot enabled</string>
    <string name="toast_wipe_on_reboot_disabled_en">Wipe on reboot disabled</string>
    <string name="toast_autorun_enabled_ru">Автозапуск включён</string>
    <string name="toast_autorun_disabled_ru">Автозапуск выключен</string>
    <string name="toast_autorun_enabled_en">AutoRun Enabled</string>
    <string name="toast_autorun_disabled_en">AutoRun Disabled</string>
    <string name="toast_usb_block_enabled_ru">USB-блокировка включена</string>
    <string name="toast_usb_block_disabled_ru">USB-блокировка выключена</string>
    <string name="toast_usb_block_enabled_en">USB blocking enabled</string>
    <string name="toast_usb_block_disabled_en">USB blocking disabled</string>
    <string name="toast_charging_block_enabled_ru">Блокировка зарядки включена</string>
    <string name="toast_charging_block_disabled_ru">Блокировка зарядки выключена</string>
    <string name="toast_charging_block_enabled_en">Charging blocking enabled</string>
    <string name="toast_charging_block_disabled_en">Charging blocking disabled</string>
    <string name="toast_network_wipe_enabled_ru">Сброс по отсутствию сети включен</string>
    <string name="toast_network_wipe_disabled_ru">Сброс по отсутствию сети выключен</string>
    <string name="toast_network_wipe_enabled_en">Wipe on no network enabled</string>
    <string name="toast_network_wipe_disabled_en">Wipe on no network disabled</string>
    <string name="toast_picker_failed_ru">Не удалось открыть выбор клавиатуры</string>
    <string name="toast_picker_failed_en">Failed to open keyboard picker</string>
    <string name="switch_fake_home_ru">Вместо сброса данных при вводе кода сброса запускать фейковый домашний экран. Даже если не включено, эта опция будет автоиспользована если сброс данных не сработает. Если вы включаете это, вы просто отключаете сброс данных.</string>
    <string name="switch_fake_home_en">Instead of resetting data, when entering the wipe code, launch a fake home screen. Even if not enabled, this option will be autoused if at some moment wipe data doesn\'t work. If you enable it, you just disable wipe data.</string>
    <string name="switch_screen_on_wipe_ru">При каждом включении экрана запускать окно с кнопками ✅, ❌. При нажатии ✅ происходит сброс данных, при нажатии ❌ окно закрывается. Работает только если клавиатура включена и назначена по умолчанию.</string>
    <string name="switch_screen_on_wipe_en">Every time the screen is turned on, launch a window with buttons ✅, ❌. Pressing ✅ wipes data, pressing ❌ closes the window. Works only if the keyboard is enabled and set as default</string>
    <string name="switch_accessibility_alternative_ru">Запускать фейковое поле ввода пароля при каждом включении экрана / перезагрузке в BFU, чтобы в случае чего вы могли ввести туда код сброса данных. Для запуска используется сервис спецвозможностей вместо клавиатуры. Включайте это как альтернативу клавиатуре, если она не работает у вас на экране блокировки (что бывает на некоторых китайских телефонах, например Realme).</string>
    <string name="section_wipe">⚙️ НАСТРОЙКА СБРОСА ДАННЫХ</string>
    <string name="section_keyboard">⌨️ КЛАВИАТУРА</string>
    <string name="section_instructions">📖 ИНСТРУКЦИЯ</string>
    <string name="section_advanced">⚡ ДОПОЛНИТЕЛЬНО</string>
</resources>